--- a/styles.css
+++ b/styles.css
@@ -468,7 +468,7 @@ a:hover + .open__arrow {
 
 /* Mobile Screen Mode */
 
-@media screen and (max-width:360px) {
+@media screen and (min-width:360px) and (max-width: 820px) {
 
     .change__logo {
         height: 12px;
